# easy_opencv

./: .gitmodules  CMakeLists.txt  README.md  opencv_build_options.cmake  retrieve_dll_files.py
.github/workflows/: build_and_run_tests.yml  build_tests.yml  create_release_executables.yml
include/easy_opencv/: easy_opencv.hpp
opencv/opencv_4_7_0/: CMakeLists.txt
src/: easy_opencv.cpp
tests/: CMakeLists.txt  opencv_build_options.cmake  tests.cpp
